Dropdown toggle button alignment fixed

--- a/core/templates/pages/classroom-page/classroom-page.component.css
+++ b/core/templates/pages/classroom-page/classroom-page.component.css
@@ -118,7 +118,7 @@ classroom-page .oppia-classroom-page-subheading-text {
 
 @media(max-width: 1150px) {
   .oppia-topic-summary-tiles {
-    margin-bottom: 55px;
+    margin-bottom: -54px;
   }
 
   .oppia-classroom-viewer-container .oppia-topic-summary-tiles {
